--- a/app/assets/stylesheets/active_admin/components/_tables.scss
+++ b/app/assets/stylesheets/active_admin/components/_tables.scss
@@ -8,8 +8,9 @@ table tr {
 }
 
 // --------- Index Tables
+// --------- Data Tables
 
-table.index_table {
+table.index_table, table.data_table {
   width: 100%;
   margin-bottom: 10px;
   border: 0;
